Desarrollo terminado para revisión
Desarrollo terminado para revisión

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,6 +1,5 @@
 .fondo1
   background-color: #ffeed2
-  border-radius: 10px
 
 .fondo2
   background-color: #3ba3f8
@@ -15,7 +14,7 @@
   background-color: #DFEAF1
 
 .fondo6
-  background-color: #DEEEFC
+  background-color: #DEEEFC !important
 
 .fondo7
   background-color: #1670B9 !important
@@ -28,9 +27,18 @@
   background-size: cover
   background-repeat: no-repeat
   background-position: center
-  
+
+.fondo10
+  background-image: url('../assets/curso/tema3/fondotema3.jpg')
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center
+
 .bordes
   border-radius: 10px
+
+.bordes50
+  border-radius: 70px
 
 .color-texto
   color: #3ba3f8
@@ -55,6 +63,9 @@
 .bajar
   margin-bottom: -80px
 
+.correr-izq30
+  margin-left: -30px
+
 .lista-ol--cuadro__vineta
     background-color: #133D60 !important
     display: inline-block
@@ -68,6 +79,10 @@
   width: 50%
   height: 50%
   margin: 0 auto
+
+.aumentar
+  width: 150px
+  height: 150px
 
 .tabla-a th 
   border-color: #e8e8e8
@@ -85,3 +100,30 @@
 .tarjeta--container > .tarjeta:last-child
   border-top-right-radius: 0 !important
   border-bottom-right-radius: 0 !important
+
+.linea-tiempo-d.color-secundario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
+  background-color: #133D60 !important
+  color: #fff !important
+
+
+.linea-tiempo-d__item--selected .linea-tiempo-d__item__content__title
+  font-weight: 700
+  background-color: #aed4f5
+
+.pt-0 
+  padding-top: 0!important
+  background-color: #aed4f5
+
+.lista-ul--color li > i:first-of-type 
+  color: #133D60 !important
+
+.fa-plus:before 
+  content: "\f067"
+  color: #fff
+
+.fa-minus:before 
+  content: "\f068"
+  color: #fff
+
+.acordion__accion__btn--a 
+  background-color: #133D60 !important
