--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -34,6 +34,15 @@
   background-repeat: no-repeat
   background-position: center
 
+.fondo11
+  background-image: url('../assets/curso/tema1/fondotema1.jpg')
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center
+
+.fondo12
+  background-color: #F6F6F6
+
 .bordes
   border-radius: 10px
 
@@ -79,6 +88,10 @@
   width: 50%
   height: 50%
   margin: 0 auto
+
+.reducir80
+  width: 80%
+  margin: 10px auto
 
 .aumentar
   width: 150px
@@ -127,3 +140,14 @@
 
 .acordion__accion__btn--a 
   background-color: #133D60 !important
+
+.slyder-d__content__card
+    background-color: #DEEEFC !important
+    width: 600px
+
+td 
+  line-height: 1.5
+  background-color: #F6F6F6
+
+.tarjeta--azul
+  background-color: #DFEAF1
