avance para completar puntos faltantes a revision
avance para completar puntos faltantes a revision

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -43,11 +43,20 @@
 .fondo12
   background-color: #F6F6F6
 
+.fondo13
+  background-image: url('../assets/curso/tema3/fondoConIcono1.svg')
+  background-size: contain
+  background-repeat: no-repeat
+  background-position: center
+
+.fondo14
+  background-image: url('../assets/curso/tema3/fondoConIcono2.svg')
+  background-size: contain
+  background-repeat: no-repeat
+  background-position: center
+
 .bordes
   border-radius: 10px
-
-.bordes50
-  border-radius: 70px
 
 .color-texto
   color: #3ba3f8
@@ -74,6 +83,9 @@
 
 .correr-izq30
   margin-left: -30px
+
+.correr-izq10
+  margin-left: -10px
 
 .lista-ol--cuadro__vineta
     background-color: #133D60 !important
@@ -118,6 +130,9 @@
   background-color: #133D60 !important
   color: #fff !important
 
+.linea-tiempo-d.color-primario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
+    background-color: #133D60 !important
+    color: #fff
 
 .linea-tiempo-d__item--selected .linea-tiempo-d__item__content__title
   font-weight: 700
@@ -151,3 +166,6 @@ td
 
 .tarjeta--azul
   background-color: #DFEAF1
+
+.tarjeta--gris
+  background-color: #fff !important
