--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -44,16 +44,8 @@
   background-color: #F6F6F6
 
 .fondo13
-  background-image: url('../assets/curso/tema3/fondoConIcono1.svg')
-  background-size: contain
-  background-repeat: no-repeat
-  background-position: center
-
-.fondo14
-  background-image: url('../assets/curso/tema3/fondoConIcono2.svg')
-  background-size: contain
-  background-repeat: no-repeat
-  background-position: center
+  background-color: #133D60
+  border-radius: 50px
 
 .bordes
   border-radius: 10px
@@ -77,6 +69,9 @@
 
 .correr-der
   margin-right: -50px
+
+.correr-img
+  margin-left: 70px
 
 .bajar
   margin-bottom: -80px
@@ -157,8 +152,8 @@
   background-color: #133D60 !important
 
 .slyder-d__content__card
-    background-color: #DEEEFC !important
-    width: 600px
+  background-color: #DEEEFC !important
+  width: 600px
 
 td 
   line-height: 1.5
@@ -169,3 +164,156 @@ td
 
 .tarjeta--gris
   background-color: #fff !important
+
+.anchoTitulo
+  width: 252px
+
+.figura1
+  z-index: 1
+
+.figura2
+  z-index: 2
+
+@media (max-width: 1400px)
+  .margenAcordion
+    margin-left: 3.5em
+  .margenTexto
+    margin-left: 0em !important
+    margin-right: 0.9em
+  .margenTitulo
+    margin-left: 0
+  .correr-izqBloq
+    margin-left: -50px
+  .padCuadro
+    padding-left: 3.5em
+    padding-right: 3.5em
+  .margenCuadroAmarillo
+    margin-right: 10px
+  .alineacion
+    align-items: end
+  .margenTextoBarra
+    margin-left: 3.5em
+  .correr-izqimg
+    margin-left: -50px
+  .margen-tarjeta
+    margin-bottom: 3em
+
+@media (max-width: 1200px)
+  .bajar
+    margin-bottom: -80px
+  .margenCuadroAmarillo
+    margin-right: 10px
+  .alineacion
+    align-items: end
+  .margenTexto
+    margin-left: 0
+    margin-right: 0.9em
+  .margenTitulo
+    margin-left: 0
+  .correr-izqimg
+    margin-left: -50px
+  .margen-tarjeta
+    margin-bottom: 6em
+
+@media (max-width: 992px)
+  .celular
+    display: none
+  .correr-izqFig
+    margin-left: -20px
+  .margenAcordion
+    margin-left: 0
+  .margenTexto
+    margin-left: 0
+    margin-right: 0.9em
+  .margenTitulo
+    margin-left: 0
+  .correr-izqBloq
+    margin-left: 0
+  .padCuadro
+    padding-left: 3.5em
+    padding-right: 3.5em
+  .margenCuadroAmarillo
+    margin-right: 10px
+  .alineacion
+    align-items: end
+  .correr-izqimg
+    margin-left: 0
+  .margenTextoBarra
+    margin-left: 1em
+  .correr
+    margin-left: -60px
+  .reducirFig2
+    width: 50%
+    height: 50%
+    margin: 0 auto
+  .reducirFig2
+    width: 60%
+    height: 60%
+    margin: 0 auto
+  .slyder-d__content__card
+    background-color: #DEEEFC !important
+    width: 500px
+
+@media (max-width: 768px)
+  .margenTitulo
+    margin-left: 1em
+  .correr-izqBloq
+    margin-left: 0
+  .imagenes
+    display: none
+  .padCuadro
+    padding-left: 2em
+    padding-right: 2em
+  .margenCuadroAmarillo
+    margin-right: 10px
+  .alineacion
+    align-items: start !important
+  .correr-izqimg
+    margin-left: 0
+  .margenTextoBarra
+    margin-left: 1em
+  .margenTexto
+    margin-left: 1em !important
+    margin-right: 2em
+  .correr
+    margin-left: -60px
+  .margen-tarjeta
+    margin-bottom: 4.5em
+
+@media (max-width: 576px)
+  .imagenes
+    display: none
+  .margenTexto
+    margin-left: 2em
+    margin-right: 2em
+  .margenTitulo
+    margin-left: 1em
+  .correr-izqBloq
+    margin-left: 0
+  .margenTextoCuadro
+    margin-left: 3em
+    margin-right: 3em
+  .padCuadro
+    padding-left: 1em
+    padding-right: 1em
+  .margenCuadroAmarillo
+    margin-right: 0
+  .alineacion
+    align-items: start !important
+  .correr-izqimg
+    margin-left: 0
+  .margenTextoBarra
+    margin-left: 1em
+  .correr
+    margin-left: -60px
+  .margen-tarjeta-abajo
+    margin-bottom: 2em
+  .reducir80
+    width: 40%
+    margin: 10px auto
+  .reducirgrafica
+    width: 80%
+    margin: 0 auto
+  .slyder-d__content__card
+    background-color: #DEEEFC !important
+    width: 350px
