Ajustes responsives y demas
Ajustes responsives y demas

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -9,6 +9,7 @@
 
 .fondo4
   background-color: #133D60
+  border-radius: 0
 
 .fondo5
   background-color: #DFEAF1
@@ -169,12 +170,12 @@ td
   width: 252px
 
 .figura1
-  z-index: 1
+  z-index: 0
 
 .figura2
-  z-index: 2
+  z-index: 1
 
-@media (max-width: 1400px)
+@media (max-width: 2400px)
   .margenAcordion
     margin-left: 3.5em
   .margenTexto
@@ -184,9 +185,6 @@ td
     margin-left: 0
   .correr-izqBloq
     margin-left: -50px
-  .padCuadro
-    padding-left: 3.5em
-    padding-right: 3.5em
   .margenCuadroAmarillo
     margin-right: 10px
   .alineacion
@@ -229,9 +227,6 @@ td
     margin-left: 0
   .correr-izqBloq
     margin-left: 0
-  .padCuadro
-    padding-left: 3.5em
-    padding-right: 3.5em
   .margenCuadroAmarillo
     margin-right: 10px
   .alineacion
@@ -242,28 +237,17 @@ td
     margin-left: 1em
   .correr
     margin-left: -60px
-  .reducirFig2
-    width: 50%
-    height: 50%
-    margin: 0 auto
-  .reducirFig2
-    width: 60%
-    height: 60%
-    margin: 0 auto
   .slyder-d__content__card
     background-color: #DEEEFC !important
     width: 500px
 
 @media (max-width: 768px)
   .margenTitulo
-    margin-left: 1em
+    margin-left: 1.5em
   .correr-izqBloq
     margin-left: 0
   .imagenes
     display: none
-  .padCuadro
-    padding-left: 2em
-    padding-right: 2em
   .margenCuadroAmarillo
     margin-right: 10px
   .alineacion
@@ -273,7 +257,7 @@ td
   .margenTextoBarra
     margin-left: 1em
   .margenTexto
-    margin-left: 1em !important
+    margin-left: 1.5em !important
     margin-right: 2em
   .correr
     margin-left: -60px
@@ -287,15 +271,9 @@ td
     margin-left: 2em
     margin-right: 2em
   .margenTitulo
-    margin-left: 1em
+    margin-left: 1.5em
   .correr-izqBloq
     margin-left: 0
-  .margenTextoCuadro
-    margin-left: 3em
-    margin-right: 3em
-  .padCuadro
-    padding-left: 1em
-    padding-right: 1em
   .margenCuadroAmarillo
     margin-right: 0
   .alineacion
