Animacion banner principal y fondo slider
Animacion banner principal y fondo slider

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -32,6 +32,12 @@
   background-repeat: no-repeat
   background-position: center
 
+.fondo14
+  background-image: url('../assets/curso/tema1/fondotema1.png')
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center
+
 .fondo12
   background-color: #F6F6F6
 
