--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -5,7 +5,7 @@
   background-color: #3ba3f8
 
 .fondo4
-  background-color: #133D60
+  background-color: #133D60    
   border-radius: 0
 
 .fondo5
@@ -93,6 +93,16 @@
   height: 50%
   margin: 0 auto
 
+.reducirTar
+  max-width: 100%
+  max-height: 40%
+  margin: 0 auto
+
+.reducirImg
+  max-width: 130%
+  max-height: 130%
+  margin: 0 auto
+
 .reducir80
   width: 80%
   margin: 10px auto
@@ -154,7 +164,7 @@
 .anchoTitulo
   width: 252px
 
-@media (max-width: 2400px)
+@media (min-width: $bp-min-xxl)
   .margenTexto
     margin-left: 0em !important
     margin-right: 0.9em
@@ -189,6 +199,8 @@
     margin-left: -50px
   .margen-tarjeta
     margin-bottom: 5.5em
+  .texto-peq
+    font-size: 0.8em
 
 @media (max-width: 992px)
   .celular
@@ -213,6 +225,8 @@
     margin-bottom: 0
   .margen-texto
     margin-bottom: 0.5em
+  .texto-peq
+    font-size: 0.7em
 
 @media (max-width: 768px)
   .margenTitulo
@@ -234,6 +248,8 @@
     margin-bottom: 0.5em
   .margen-texto2
     margin-bottom: 0
+  .texto-peq
+    font-size: 0.6em
 
 @media (max-width: 576px)
   .imagenes
