Ajuste a diseño responsive
Ajuste a diseño responsive

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -184,7 +184,9 @@
 @media (max-width: 1400px)
   .margen-tarjeta
     margin-bottom: 4em 
-
+  .correr-izqBloq
+    margin-left: -50px
+    
 @media (max-width: 1200px)
   .bajar
     margin-bottom: -80px
