--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -105,11 +105,6 @@
   height: 50%
   margin: 0 auto
 
-.reducirTar
-  max-width: 100%
-  max-height: 40%
-  margin: 0 auto
-
 .reducirImg
   max-width: 130%
   max-height: 130%
@@ -197,12 +192,6 @@ td, th
 .anchoTitulo
   width: 252px
 
-.subir-col
-  margin-top: -40px
-
-.bajar-col
-  margin-bottom: -40px
-
 @media (min-width: $bp-min-xxl)
   .margenTexto
     margin-left: 0em !important
@@ -218,27 +207,43 @@ td, th
   .margen-texto
     margin-bottom: 3em
   .reducirImg2
-    max-width: 130%
+    max-width: 150%
     max-height: 130%
     margin: 0 auto
-  .margen-izq
-    margin-left: 0 !important
-  .margen-tarjeta2
-    margin-bottom: 0
+  .reducirTar
+    max-width: 100%
+    max-height: 40%
+    margin: 0 auto
+  .margen-Tar
+    margin-top: 0
+  .tarjeta-avatar-b .tarjeta
+    width: 100%
+    margin-left: -14%
+    padding-left: 10%
+  .slyder-d__content__card
+    width: 700px
 
-@media (max-width: 1400px)
+@media (max-width: 1400px) and (min-width: 1201px)
   .margen-tarjeta
     margin-bottom: 4em 
   .reducirImg2
     max-width: 130%
     max-height: 130%
     margin: 0 auto
-  .margen-izq
-    margin-left: 0 !important
-  .margen-tarjeta2
-    margin-bottom: 3em
+  .reducirTar
+    max-width: 100%
+    max-height: 50%
+    margin: 0 auto
+  .margen-Tar
+    margin-top: 0
+  .tarjeta-avatar-b .tarjeta
+    width: 100%
+    margin-left: -14%
+    padding-left: 10%
+  .slyder-d__content__card
+    width: 700px
     
-@media (max-width: 1200px)
+@media (max-width: 1200px) and (min-width: 993px)
   .bajar
     margin-bottom: -80px
   .alineacion
@@ -252,16 +257,19 @@ td, th
     margin-left: -50px
   .margen-tarjeta
     margin-bottom: 5.5em
-  .margen-tarjeta2
-    margin-bottom: 6.5em
-  .texto-peq
-    font-size: 0.8em
-  .margen-izq
-    margin-left: 0 !important
   .reducirImg2
     max-width: 130%
     max-height: 130%
     margin: 0 auto
+  .reducirTar
+    max-width: 100%
+    max-height: 65%
+    margin: 0 auto
+  .margen-Tar
+    margin-top: 0
+  .slyder-d__content__card
+    width: 500px
+    height: 150px
 
 @media (max-width: 992px)
   .celular
@@ -279,23 +287,22 @@ td, th
     margin-left: 0
   .slyder-d__content__card
     width: 500px
+    height: 140px
   .bajar
     margin-bottom: -120px
   .bajar2
     margin-bottom: 0
   .margen-texto
     margin-bottom: 0
-  .texto-peq
-    font-size: 0.7em
   .margen-texto2
     margin-bottom: 2.5em
   .reducir80
     width: 60%
     margin: 10px auto
-  .margen-tarjeta2
-    margin-bottom: 12em
-  .margen-izq
-    margin-left: 0.5em !important
+  .margen-Tar
+    margin-top: 3em
+  .margen-abajo
+    margin-bottom: 3em
 
 @media (max-width: 768px)
   .margenTitulo
@@ -315,16 +322,12 @@ td, th
     margin-bottom: 0.5em
   .margen-texto2
     margin-bottom: 0
-  .texto-peq
-    font-size: 0.6em
   .reducirImg2
     max-width: 150%
     max-height: 150%
     margin: 0 auto
-  .margen-tarjeta2
-    margin-bottom: 11.5em
-  .margen-izq
-    margin-left: 0.5em !important
+  .margen-Tar
+    margin-top: 3em
 
 @media (max-width: 576px)
   .imagenes
@@ -345,7 +348,8 @@ td, th
     width: 80%
     margin: 0 auto
   .slyder-d__content__card
-    width: 350px
+    width: 370px
+    height: 140px
   .bajar
     margin-bottom: 0
     margin-top: -70px
@@ -353,15 +357,9 @@ td, th
     margin-bottom: 0.5em
   .margen-texto2
     margin-bottom: 0
-  .subir-col
-    margin-top: -30px
-  .bajar-col
-    margin-bottom: -30px
   .reducirImg2
     max-width: 150%
     max-height: 150%
     margin: 0 auto
-  .margen-tarjeta2
-    margin-bottom: 12em
-  .margen-izq
-    margin-left: 0.5em !important
+  .margen-Tar
+    margin-top: 3em
