--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -192,6 +192,9 @@ td, th
 .anchoTitulo
   width: 252px
 
+.margen2
+  margin-bottom: 0
+
 @media (min-width: $bp-min-xxl)
   .margenTexto
     margin-left: 0em !important
@@ -222,7 +225,8 @@ td, th
     padding-left: 10%
   .slyder-d__content__card
     width: 700px
-
+  .bajar
+    margin-bottom: -80px
 @media (max-width: 1400px) and (min-width: 1201px)
   .margen-tarjeta
     margin-bottom: 4em 
@@ -242,6 +246,8 @@ td, th
     padding-left: 10%
   .slyder-d__content__card
     width: 700px
+  .bajar
+    margin-bottom: -40px
     
 @media (max-width: 1200px) and (min-width: 993px)
   .bajar
@@ -303,6 +309,12 @@ td, th
     margin-top: 3em
   .margen-abajo
     margin-bottom: 3em
+  .margen-tarjeta
+    margin-bottom: 3em !important
+  .altura-tarjeta
+    padding-top: 20px
+    height: 35em !important
+    width: 100% !important
 
 @media (max-width: 768px)
   .margenTitulo
@@ -317,7 +329,7 @@ td, th
     margin-left: 1.5em !important
     margin-right: 2em
   .margen-tarjeta
-    margin-bottom: 3em
+    margin-bottom: 3em !important
   .margen-texto
     margin-bottom: 0.5em
   .margen-texto2
@@ -363,3 +375,5 @@ td, th
     margin: 0 auto
   .margen-Tar
     margin-top: 3em
+  .margen2
+    margin-bottom: 3em !important
